# mini-metars

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yaml
src/: App.tsx  CustomTitlebar.tsx  DeleteButton.tsx  Metar.tsx  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: awc.rs  main.rs  profiles.rs  settings.rs  state.rs  update.rs  window.rs
