[package]
name = "mini-metars"
version = "0.0.4"
description = "A small on-top display for METARs"
authors = ["Ken Greim"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.2", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.2", features = ["default"] }
tauri-plugin-shell = "2.0.0-rc.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
anyhow = "1.0.86"
flate2 = "1.0.31"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = "1.39.2"
chrono = { version = "0.4.38", features = ["serde"] }
vatsim_utils = "0.5.1"
regex = "1.10.6"
dirs = "5.0.1"
tauri-plugin-dialog = "2.0.0-rc.0"
tauri-plugin-os = "2.0.0-rc.0"
tauri-plugin-log = "2.0.0-rc.0"
log = "0.4.22"

# Optimize for smaller binary size
[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
